--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -7,13 +7,13 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/puihayyip/PhotoAppConfiguration
+          uri: https://github.com/puihayyip/NHPS
+          search-paths:
+            - ConfigurationFolder
           username: puihayyip
           password: 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
           clone-on-start: true
           default-label: main
-#        native:
-#          search-locations: file://{user.home}/Documents/Code/'Spring Cloud Tutorial'
 
   rabbitmq:
     host: localhost
