--- a/ConfigurationFolder/users-ws.yml
+++ b/ConfigurationFolder/users-ws.yml
@@ -26,3 +26,7 @@ logging.file.name: users-ws.log
 authorization.token.header:
   name: Authorization
   prefix: Bearer
+
+logging.level.com.team42.NHPS.api.Users:
+  data.AlbumsServiceClient: DEBUG
+  service.UsersServiceImpl: DEBUG
