--- a/Users/dockerfile
+++ b/Users/dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:17-jdk-slim
 VOLUME /tmp
-COPY target/PhotoAppApiUsers-0.0.1-SNAPSHOT.jar users-microservice.jar
+COPY target/Users-0.0.1-SNAPSHOT.jar users-microservice.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/users-microservice.jar"]
