--- a/Users/src/main/resources/application.yml
+++ b/Users/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-spring.config.import: optional:configserver:http://localhost:8012
+spring:
+  application.name: users-ws
+  config.import: optional:configserver:http://localhost:8012
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: puihayyip
+    password: P@ssw0rd123
