--- a/ConfigServer/dockerfile
+++ b/ConfigServer/dockerfile
@@ -2,5 +2,6 @@ FROM openjdk:17-jdk-slim
 VOLUME /tmp
 COPY apiEncryptionKey.jks apiEncryptionKey.jks
 COPY UnlimitedJCEPolicyJDK8/* /usr/lib/jvm/java-1.8-openjdk/jre/lib/security/
-COPY target/PhotoAppApiConfigServer-0.0.1-SNAPSHOT.jar ConfigServer.jar
+COPY target/ConfigServer-0.0.1-SNAPSHOT.jar ConfigServer.jar
+EXPOSE 8012
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","ConfigServer.jar"]
