--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: PhotoAppApiConfigServer
+    name: ApiConfigServer
   profiles:
     active: git
   cloud:
@@ -12,15 +12,15 @@ spring:
             - ConfigurationFolder
           username: puihayyip
 #          password: ${{ secrets.repo_access_token }}
-          password: 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
+          password:
           clone-on-start: true
           default-label: main
 
   rabbitmq:
     host: localhost
     port: 5672
-    username: puihayyip
-    password: P@ssw0rd123
+    username: guest
+    password: guest
 
 server:
   port: 8012
