--- a/UsersService/src/main/resources/application.yml
+++ b/UsersService/src/main/resources/application.yml
@@ -4,5 +4,5 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
-    username: puihayyip
-    password: P@ssw0rd123
+    username: guest
+    password: guest
